src/objects/Fiscal_Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fiscal Documents</relationshipLabel>
        <relationshipName>Fiscal_Documents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Due_Date__c</fullName>
        <formula>Due_Date__c +  $Setup.Buffer_Payment_Term__c.Default_Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Allocated</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Unallocated__c</fullName>
        <formula>Subtotal__c  - Amount_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Unallocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Proc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>to be matched with payment.description</description>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Dispute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Date__c + Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Subtotal__c</fullName>
        <label>Subtotal</label>
        <summarizedField>Fiscal_Document_Line__c.Net_Subtotal_Value__c</summarizedField>
        <summaryForeignKey>Fiscal_Document_Line__c.Fiscal_Document__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <defaultValue>&apos;Unknown&apos;</defaultValue>
        <description>The original source of the liability for this invoice.</description>
        <label>Original Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ThingPark</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Fiscal Documents</relationshipLabel>
        <relationshipName>Fiscal_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_Total_Value__c</fullName>
        <formula>CASE( RecordType.DeveloperName ,&quot;credit_note&quot;, Total_Value__c * -1, Total_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Draft__c == True, &apos;Draft&apos;,
  IF(RecordType.DeveloperName == &apos;sales_invoice&apos;,
    IF(Amount_Allocated__c == Subtotal__c, &apos;Paid&apos;,
      IF(Amount_Allocated__c == 0, &apos;Open&apos;,
        IF(Amount_Allocated__c &lt; Subtotal__c, &apos;Partially Paid&apos;, &apos;&apos;)
      )
      &amp;
      IF( Due_Date__c &lt; DATEVALUE(NOW()), IF( Actual_Due_Date__c &gt;= DATEVALUE(NOW()), &apos; - Overdue (Buffer)&apos;, &apos; - Overdue&apos;), &apos;&apos;)
    ),
    IF(Amount_Allocated__c == Subtotal__c, &apos;Allocated&apos;,
      IF(Amount_Allocated__c == 0, &apos;Unallocated&apos;,
        IF(Amount_Allocated__c &lt; Subtotal__c, &apos;Partially Allocated&apos;, &apos;&apos;)
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal_Value__c</fullName>
        <formula>Net_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Total</label>
        <summarizedField>Fiscal_Document_Line__c.Subtotal_Value__c</summarizedField>
        <summaryForeignKey>Fiscal_Document_Line__c.Fiscal_Document__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Subtotal__c</fullName>
        <label>Tax</label>
        <summarizedField>Fiscal_Document_Line__c.Tax_Subtotal_Value__c</summarizedField>
        <summaryForeignKey>Fiscal_Document_Line__c.Fiscal_Document__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Value__c</fullName>
        <formula>Tax_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fiscal Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Subtotal_Value__c</columns>
        <columns>Tax_Value__c</columns>
        <columns>Total_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ThingPark_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Description__c</columns>
        <columns>Price_Book__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>ThingPark Invoices</label>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiscal Documents</pluralLabel>
    <recordTypes>
        <fullName>credit_note</fullName>
        <active>true</active>
        <label>Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>sales_invoice</fullName>
        <active>true</active>
        <label>Sales Invoice</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_Allocated_Less_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Allocated__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount_Allocated__c</errorDisplayField>
        <errorMessage>Amount Allocated cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Allocated_More_Total</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Allocated__c &gt; Subtotal__c</errorConditionFormula>
        <errorDisplayField>Amount_Allocated__c</errorDisplayField>
        <errorMessage>Amount Allocated cannot be greater than Fiscal Document Total</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Reverse_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Draft__c == True, NOT(ISNEW()), ISCHANGED(Draft__c))</errorConditionFormula>
        <errorMessage>Fiscal Document cannot be reverted to Draft Status once it has been validated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Zero_Total_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(Draft__c == False, NOT(ISNEW()), ISCHANGED(Draft__c)),  Subtotal__c == 0)</errorConditionFormula>
        <errorMessage>Fiscal Document cannot be validated if its total is 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Account__c) , Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account cannot be changed on a Fiscal Document that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Automatic</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Automatic__c ) , Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Automatic__c</errorDisplayField>
        <errorMessage>Automatic cannot be changed on a Fiscal Document that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Date__c) , Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Date cannot be changed on a Fiscal Document that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Payment_Term</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Payment_Term__c ) , Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Payment_Term__c</errorDisplayField>
        <errorMessage>Payment Term cannot be changed on a Fiscal Document that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Record_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(RecordTypeId), Draft__c == False, NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Record Type cannot be changed on a Fiscal Document that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Non_Draft_Reference</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Reference__c ) , Draft__c = False)</errorConditionFormula>
        <errorDisplayField>Reference__c</errorDisplayField>
        <errorMessage>Reference cannot be changed on a Fiscal Document that is not in Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Protect_Paid_Dispute</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Amount_Allocated__c &gt; 0, ISCHANGED(Dispute__c))</errorConditionFormula>
        <errorDisplayField>Dispute__c</errorDisplayField>
        <errorMessage>Dispute cannot be changed on an Invoice that is fully or partially allocated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED(Draft__c) , Draft__c == False, Date__c &lt; DATEVALUE(NOW()))</errorConditionFormula>
        <errorDisplayField>Date__c</errorDisplayField>
        <errorMessage>Fiscal Document Date cannot be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Reference</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Draft__c) , Draft__c == False, Reference__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Reference__c</errorDisplayField>
        <errorMessage>Reference cannot be blank</errorMessage>
    </validationRules>
</CustomObject>